Refuse a version override the module's classpath cannot satisfy
Pinning the version in Settings > Tools > Karate to something the module does
not have produced a baffling failure. Forcing V1 on a Karate 2 module sent the
run down the v1 path, which first had the plugin inject its bundled
karate-junit5 jar beside the user's karate-core 2.x, then died with

  Exception in thread "main" java.lang.NoSuchMethodException:
    com.intuit.karate.junit5.Karate.<init>()

Nothing in that mentions the setting that caused it, and the classpath advice
it did give was wrong - karate-core was present, just the other major.

The contradiction is now caught before the process starts and reported as an
execution error naming the setting and the way out. AUTO is unaffected.

Karate2UITest covers it by flipping the preference through the plugin's own
settings service (read fresh on each launch, so no IDE restart), running a
feature that passes seconds earlier under AUTO, and asserting no run starts.

Also refreshes the docs, which had gone stale: the handoff's 'not yet
verified' list is all verified and its next steps are all done, so it now
records what exists, the bugs this work surfaced, what is deliberately not
done, and the known issues left alone.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>